WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77791
[GTK] Web content oftens steals focus from other widgets
https://bugs.webkit.org/show_bug.cgi?id=77791
Summary
[GTK] Web content oftens steals focus from other widgets
Martin Robinson
Reported
2012-02-03 16:15:43 PST
This is an annoying bug. To reproduce it, load Google in Epiphany and then quickly press "Ctr+L" to re-focus the address bar. The page will steal focus from the address bar shortly thereafter.
Attachments
Patch
(5.03 KB, patch)
2012-02-03 17:15 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2012-02-03 16:18:16 PST
Believe it or not this seems to be a regression from 2007. Before that time a widget would only grab focus if it was backed by a real widget. Nowadays it grabs focus no matter what. If there is no real widget, it forces the WebView to grab focus.
Martin Robinson
Comment 2
2012-02-03 16:18:27 PST
Here's the change in question:
http://trac.webkit.org/changeset/24963
Martin Robinson
Comment 3
2012-02-03 16:19:39 PST
Another interesting data point is that we were very diligent in making sure this bug also existed in WebKit2.
Martin Robinson
Comment 4
2012-02-03 17:15:19 PST
Created
attachment 125451
[details]
Patch
WebKit Review Bot
Comment 5
2012-02-20 18:04:14 PST
Comment on
attachment 125451
[details]
Patch Clearing flags on attachment: 125451 Committed
r108278
: <
http://trac.webkit.org/changeset/108278
>
WebKit Review Bot
Comment 6
2012-02-20 18:04:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug