[GTK] Web content oftens steals focus from other widgets https://bugs.webkit.org/show_bug.cgi?id=77791

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-02-20
Reviewed by Gustavo Noronha Silva.

Source/WebCore:

* platform/gtk/WidgetGtk.cpp:
(WebCore::Widget::setFocus): No longer do anything special to try
to grab "real" widget focus. This matches the behavior on Qt.
* plugins/gtk/PluginViewGtk.cpp:
(WebCore::PluginView::setFocus): Moved the focus handling to here.
This ensures that behavior for plugins does not change.

Source/WebKit/gtk:

* tests/testwebview.c: Added a WebKit1 test to verify this behavior.

git-svn-id: svn://svn.chromium.org/blink/trunk@108278 bbb929c8-8fbe-4397-9dbb-9b2b20218538